-Pain ui with css -Modify layout to scale good with user interaction -Add with button handler -Remove ToolBar and Window menu

--- a/res.qrc
+++ b/res.qrc
@@ -15,5 +15,6 @@
         <file>icon/rig.png</file>
         <file>icon/coordinate1.png</file>
         <file>icon/position.png</file>
+        <file>icon/kfx.png</file>
     </qresource>
 </RCC>
